# rlox

./: .clang-format  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rlox.h
rlox/: Cargo.toml  rlox.h
rlox/src/: alloc.rs  chunk.rs  compiler.rs  lib.rs  main.rs  object.rs  scanner.rs  table.rs  value.rs  vec.rs  vm.rs
src/: alloc.rs  chunk.c  chunk.h  chunk.rs  common.h  compiler.c  compiler.h  compiler.rs  debug.c  debug.h  gc.rs  heap.rs  lib.rs  main.c  main.rs  memory.c  memory.h  object.c  object.h  object.rs  scanner.c  scanner.h  scanner.rs  table.c  table.h  table.rs  value.c  value.h  value.rs  vec.h  vec.rs  vm.c  vm.h  vm.rs
src/snapshots/: rlox__tests__test_programs__corecursive.lox.stdout.snap  rlox__tests__test_programs__err_compile__string_unterminated.lox.stderr.snap  rlox__tests__test_programs__err_runtime__type_mismatch_add.lox.stderr.snap  rlox__tests__test_programs__err_runtime__type_mismatch_add.lox.stdout.snap  rlox__tests__test_programs__fibonacci.lox.stdout.snap  rlox__tests__test_programs__fizzbuzz.lox.stdout.snap  rlox__tests__test_programs__hello.lox.stdout.snap  rlox__tests__test_programs__math.lox.stdout.snap  rlox__tests__test_programs__strings.lox.stdout.snap
test_programs/: corecursive.lox  fibonacci.lox  fizzbuzz.lox  math.lox  strings.lox
test_programs/err_compile/: string_unterminated.lox
test_programs/err_runtime/: type_mismatch_add.lox
