[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

[features]
log_gc = []
print_code = []
stress_gc = []
trace_execution = []

[dependencies]
libc = "0.2.150"
once_cell = "1.18.0"
thiserror = "1.0.51"

[dev-dependencies]
insta = "1.34.0"
rstest = "0.18.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
